--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: rafaymhddn
   instagram: rafaymhddn
-  linkedin: rafaymohiuddin
+  linkedin: rafaymhddn
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: rafaymhddn
