--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ url: "https://rafaymhddn.github.io/" # the base hostname & protocol for your sit
 #
 
 #permalink: /:title/
-permalink: /education
+permalink: /
 
 
 # The release of Jekyll Now that you're using
