--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Rafay
 description: always curious
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/dp4.jpeg
+avatar: images/main/dp4.jpeg
 
 #
 # Flags below are optional
