single_page multipl switch

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,12 @@ name: Rafay
 # Short bio or description (displayed in the header)
 description: always curious
 
-# Toggle between one-page home layout and separate Education/Experience pages.
-one_page: true
+# Toggle between one-page home layout and separate pages per section.
+one_page_education: true
+one_page_experience: true
+one_page_publications: true
+one_page_projects: true
+one_page_contact: true
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/main/dp4.jpeg
