--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: always curious
 one_page_education: true
 one_page_experience: true
 one_page_publications: true
-one_page_projects: true
+one_page_projects: false
 one_page_contact: true
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
